--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 fastapi==0.110.0
-uvicorn[standard]==0.29.0
-openai==1.12.0
-twilio==9.0.3
-python-dotenv==1.0.1
-requests==2.31.0
 starlette==0.37.2
-websockets==12.0
-pydantic==2.6.1
+uvicorn==0.30.0
+python-dotenv==1.0.1
+pydantic==2.7.1
+openai==1.30.1
+twilio==9.2.3
+aiohttp==3.9.5
