--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-fastapi==0.110.0
+fastapi==0.109.2
 starlette==0.36.3
-uvicorn==0.30.0
+uvicorn==0.29.0
 python-dotenv==1.0.1
-pydantic==2.7.1
-aiohttp==3.9.5
-openai==1.30.1
-twilio==9.2.3
+requests==2.31.0
+websockets==12.0
+openai==1.6.1
