--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.109.2
-starlette==0.36.3
+fastapi==0.110.0
 uvicorn==0.29.0
 python-dotenv==1.0.1
 requests==2.31.0
+starlette==0.37.2
 websockets==12.0
-openai==1.6.1
-sqlalchemy==2.0.23
+pydantic==2.6.1
+SQLAlchemy==1.4.51
