--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ uvicorn==0.29.0
 python-dotenv==1.0.1
 requests==2.31.0
 websockets==12.0
-pydantic==2.5.3
-pydantic-core==2.14.6
+
+# Use pure Python versions ONLY (NO rust compiler needed)
+pydantic==2.6.4
+pydantic-core==2.16.3 --only-binary=:all:
+
 SQLAlchemy==1.4.51
