--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@ python-dotenv==1.0.1
 requests==2.31.0
 websockets==12.0
 
-# Use pure Python versions ONLY (NO rust compiler needed)
 pydantic==2.6.4
-pydantic-core==2.16.3 --only-binary=:all:
+pydantic-core==2.41.1
 
 SQLAlchemy==1.4.51
