--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,7 @@ services:
   - type: web
     name: doxen-ai-voice
     env: python
-    plan: free
+    plan: starter
     region: oregon
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
-    envVars:
-      - key: PYTHON_VERSION
-        value: "3.12.3"
