--- a/render.yaml
+++ b/render.yaml
@@ -7,3 +7,7 @@ services:
 
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.12.3
