--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,25 @@
+# Exported from Render on 2025-12-24T03:45:17Z
 version: "1"
-
-services:
-  - type: web
-    name: doxen-ai-voice
-    env: python
-    plan: starter
-    region: oregon
-
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
-
-    envVars:
-      - key: PYTHON_VERSION
-        value: "3.12.3"
+projects:
+- name: My project
+  environments:
+  - name: Production
+    services:
+    - type: web
+      name: Doxen-AI-Voice
+      runtime: python
+      repo: https://github.com/Gundam-Ronin/Doxen-AI-Voice
+      plan: free
+      envVars:
+      - key: ASSISTANT_PHONE_NUMBER
+        sync: false
+      - key: TWILIO_ACCOUNT_SID
+        sync: false
+      - key: TWILIO_AUTH_TOKEN
+        sync: false
+      - key: OPENAI_API_KEY
+        sync: false
+      region: virginia
+      buildCommand: pip install -r requirements.txt
+      startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+      autoDeployTrigger: commit
