--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ uvicorn==0.29.0
 python-dotenv==1.0.1
 requests==2.31.0
 websockets==12.0
-pydantic==2.4.2 
+pydantic==2.5.3
+pydantic-core==2.14.6
 SQLAlchemy==1.4.49
-
