--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,12 @@ version: "1"
 services:
   - type: web
     name: doxen-ai-voice
-    runtime: python3.10
     region: oregon
     plan: starter
+    env: docker
 
-    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
+    buildCommand: "docker build -t doxen-ai-voice ."
+    startCommand: "docker run -p $PORT:10000 doxen-ai-voice"
 
     envVars:
       - key: OPENAI_API_KEY
