--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,14 @@ websockets==12.0
 pydantic==2.5.3
 pydantic-core==2.14.6
 SQLAlchemy==1.4.49
-twilio==9.2.3
+
+# Required for routers to load
 openai==1.63.0
+twilio==9.2.3
+pinecone-client==3.2.2
+stripe==10.6.0
+sendgrid==6.11.0
+
+# Optional but usually needed
+httpx==0.27.0
+jinja2==3.1.4
